@@ -99,20 +99,15 @@ dependencies {
     implementation "co.paralleluniverse:quasar-core:$quasar_version"
 }
 
-compileJava {
-    doFirst {
-        options.compilerArgs = [
-            '--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED'
-        ]
+processResources {
+    from(project(":node:capsule").files("src/main/resources/node-jvm-args.txt")) {
+        into("net/corda/testing/node/internal")
     }
 }
 
 task integrationTest(type: Test) {
     testClassesDirs = sourceSets.integrationTest.output.classesDirs
     classpath = sourceSets.integrationTest.runtimeClasspath
-
-    jvmArgs test_add_opens
-    jvmArgs test_add_exports
 }
 
 jar {
